Исправлен поиск фильмов после ревью